# NSEngine

./: CMakeLists.txt  NewArchitecture.org  README.md  README.org  build.sh  cmake_install.cmake  run.sh  test.cpp
PostProcessing/: HorizontalBlurShader.h  PPEffect.h  PostProcessing.h  Shockwave.h  ShockwaveShader.h  VerticalBlurShader.cpp
asset/shaders/: animTCFragmentShader  defaultShader.vert
bloat_probably/: AnimShaderTwoColor.cpp  AnimShaderTwoColor.h  LayerRenderer.cpp
bloat_probably/AnmOpener/: AnmDraw.cpp  AnmFile.h  AnmInstrs.cpp  AnmManagerN.cpp  AnmManagerN.h  AnmSprite.h  AnmVM.cpp  AnmVM.h
engine/: CMakeLists.txt
engine/modules/: CMakeLists.txt
engine/modules/audio_engine/: CMakeLists.txt
engine/modules/audio_engine/include/: NSAudio.h
engine/modules/audio_engine/src/: MusicBuffer.cpp  MusicBuffer.h  NSAudio.cpp  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h
engine/modules/audio_engine/src/files/: wav.cpp  wav.h
engine/modules/imgui/: ImGuiContext.cpp  ImGuiContext.hpp
engine/modules/imgui_ns/: CMakeLists.txt
engine/modules/imgui_ns/include/: imgui_ns.hpp
engine/modules/imgui_ns/src/: ImGuiContext.cpp  imgui_impl_x11.cpp  imgui_impl_x11.h
engine/modules/n3d/: CMakeLists.txt
engine/modules/n3d/TODO/: Light.h  Loader3D.cpp  Loader3D.h  ModelData.h  ModelTexture.h  N3D.h  OBJFileLoader.cpp  OBJFileLoader.h  OBJLoader.cpp  OBJLoader.h  Object3D.h  ObjectList.cpp  ObjectList.h  ObjectRenderer.cpp  ObjectRenderer.h  OutlineShader.cpp  OutlineShader.h  RawModel.h  Renderer3D.cpp  Renderer3D.h  SkyboxRenderer.cpp  SkyboxRenderer.h  SkyboxShader.cpp  SkyboxShader.h  StaticShader.cpp  StaticShader.h  Terrain.cpp  Terrain.h  TerrainRenderer.cpp  TerrainRenderer.h  TerrainShader.cpp  TerrainShader.h  TerrainTexture.h  TexManager.cpp  TexManager.h  TexturedModel.h  Vertex.h  WaterFrameBuffers.cpp  WaterFrameBuffers.h  WaterRenderer.cpp  (+4 more)
engine/modules/n3d/TODO/shaders/: outlineFragment
engine/modules/ns3d/TODO/: Light.h  Loader3D.h  Object3D.h  ObjectList.cpp  ObjectList.h  SkyboxRenderer.h  SkyboxShader.cpp  TerrainRenderer.cpp  TerrainShader.h  TerrainTexture.h  TexManager.h  WaterFrameBuffers.cpp  WaterRenderer.h
engine/modules/postprocessing/: CMakeLists.txt
engine/modules/postprocessing/TODO/: PPEffect.h  PostProcessing.cpp  PostProcessing.h
engine/modules/postprocessing/TODO/samples/blur/: HorizontalBlur.cpp  HorizontalBlur.h  HorizontalBlurShader.cpp  HorizontalBlurShader.h  VerticalBlur.cpp  VerticalBlur.h  VerticalBlurShader.cpp  VerticalBlurShader.h
engine/modules/postprocessing/TODO/samples/shockwave/: Shockwave.cpp  Shockwave.h  ShockwaveEffectShader.cpp  ShockwaveEffectShader.h  ShockwaveShader.cpp  ShockwaveShader.h
engine/modules/postprocessing/TODO/samples/shockwave/shaders/: postproc.shockwave.frag.glsl  postproc.shockwaveEffect.vert.glsl
engine/modules/shared_src/: modules_init.cpp  modules_run.cpp
engine/src/: DefaultShader.cpp  DefaultShader.hpp  DrawBatch.cpp  DrawBatch.h  DrawBatch2.cpp  DrawBatch2.h  DrawFuncs.cpp  DrawFuncs.h  EventHandler.hpp  EventProcessor.h  FileOpener.cpp  FileOpener.h  FrameBuffer.cpp  FrameBuffer.h  InputManager.cpp  Interp.cpp  Interp.hpp  NSEngine.cpp  NSEngine.hpp  ShaderProgram.cpp  ShaderProgram.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.hpp  Timing.cpp  Timing.h  Window.cpp  Window.h  Window.hpp  asserts.h  color.cpp  color.h  defines.h  input.cpp  input.hpp  (+5 more)
engine/src/math/: Random.h  cstes.hpp  math.cpp  math.hpp
engine/src/math/types/: quat.hpp  types.hpp
engine/src/math/types/mat/: mat.hpp  mat4.hpp
engine/src/math/types/vec/: ivec2.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
engine/src/platform/: filesystem.cpp  platform.h  platform_linux.cpp  platform_win32.cpp  platform_wnd.h  platform_wnd_sdl.cpp  platform_wnd_sdl.h
engine/src/platform/Wnd/: Wnd.h  Wnd_common.cpp  Wnd_common.h
engine/src/platform/Wnd/SDL_GL/: SDL_GL_.cpp  SDL_GL_.h
engine/src/platform/Wnd/X_GL/: X_GL_.cpp  X_GL_.h
postproc/: PostProcessing.cpp
redo/: LoadingScreen.cpp  NewArchitecture.org  color.cpp  color.h
redo/Audio/: MusicBuffer.cpp  MusicBuffer.h  SoundBuffer.h  SoundDevice.cpp
redo/NS3D/: Light.h  ModelData.h  NS3D.h  OBJFileLoader.cpp  Object3D.h  ObjectList.cpp  ObjectList.h  ObjectRenderer.cpp  SkyboxRenderer.cpp  SkyboxShader.h  StaticShader.h  Terrain.cpp  Terrain.h  TerrainRenderer.cpp  TerrainShader.cpp  TexManager.cpp  Vertex.h  WaterShader.h  WaterTile.h
redo/NSGui/: RenderableText.h
redo/NSRig/: NSRig.h  NSRigAnim.h  NSRigEditor.cpp  NSRigGraphics.h  NSRigGraphicsLine.h
redo/bloat_probably/: LayerRenderer.h  taskSchedule.cpp
redo/postproc/: HorizontalBlurShader.cpp  PPEffect.h  PostProcessing.h  ShockwaveEffectShader.cpp  VerticalBlur.cpp
scripts/: compileSprite.py  createAssetFile.py  mkfont.py
src/: AnimScript.cpp  AnimScript.h  AnimShader.cpp  AnimShader.h  AnmManager.cpp  Assets.cpp  Assets.h  AudioEngine.cpp  AudioEngine.h  Bytestreams.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  DrawFuncs.cpp  DrawFuncs.h  Engine.cpp  Engine.hpp  Error.cpp  Error.h  EventProcessor.h  FileOpener.cpp  FileOpener.h  FrameBuffer.cpp  FrameBuffer.h  GLTexture.h  GameLayers.cpp  GameLayers.h  GameSprites.cpp  GameSprites.h  GraphicsLayer.cpp  GraphicsLayer.h  HorizontalBlur.cpp  HorizontalBlur.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  Interp.hpp  Interpolator.cpp  (+66 more)
src/AnmOpener/: AnmBitflags.h  AnmFile.cpp  AnmFile.h  AnmManagerN.cpp  AnmManagerN.h  AnmVM.cpp  AnmVM.h  AnmVariables.cpp
src/NS3D/: Loader3D.cpp  Loader3D.h  ModelData.h  ModelTexture.h  NS3D.h  OBJFileLoader.cpp  OBJFileLoader.h  OBJLoader.cpp  OBJLoader.h  Object3D.h  ObjectRenderer.cpp  ObjectRenderer.h  OutlineShader.cpp  OutlineShader.h  RawModel.h  Renderer3D.cpp  Renderer3D.h  SkyboxRenderer.cpp  SkyboxRenderer.h  SkyboxShader.cpp  SkyboxShader.h  StaticShader.cpp  StaticShader.h  Terrain.cpp  (+16 more)
testbed/: CMakeLists.txt
tests/: CMakeLists.txt
(+51 files in other folders)
